# msu_mmp_diary

./: diary
Distillation/: distillator.ipynb
business/: Main_preparing.ipynb  create_train_data_y.ipynb  diary
business/.ipynb_checkpoints/: Main_preparing-checkpoint.ipynb  create_train_data_y-checkpoint.ipynb
business/cpp/: CMakeLists.txt  test.py
business/cpp/bridge/: CMakeLists.txt  ML.i
business/cpp/cpp_modules/: CMakeLists.txt  kNN.cpp  kNN.hpp  matrix.hpp  matrix.tpp
business/cpp/python_modules/: ML.py  MLPYTHON_wrap.cxx
regression/: CMakeLists.txt  test.py
regression/bridge/: ML.i
regression/cpp_modules/: CMakeLists.txt  regress.cpp  regress.hpp  regress.tpp
regression/python_modules/: ML.py  MLPYTHON_wrap.cxx
trading_2020/: README.md  diary.txt
